fixed firefox bug with navbar collapse

--- a/stylus/style.styl
+++ b/stylus/style.styl
@@ -375,6 +375,6 @@ footer
 
 @media (min-width: 768px)
   .navbar .container-fluid
-    width 760px
+    width 765px
     float none
     margin 0 auto
